<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    app:cardCornerRadius="@dimen/card_corner_radius"
    app:cardElevation="@dimen/card_corner_elevation"
    android:layout_margin="@dimen/app_margin">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView

                android:layout_row="0"
                android:layout_column="0"
                android:layout_columnWeight="1"
                style="@style/TextViewStyle"


                android:hint="@string/electricity"

                tools:ignore="LabelFor"

                android:layout_rowWeight="1" />


            <TextView

                android:layout_row="1"
                android:layout_column="0"

                android:layout_columnWeight="1"
                android:hint="@string/XBC"
                style="@style/TextViewStyle"




                android:layout_rowWeight="1" />

            <TextView

                android:layout_row="2"
                android:layout_column="0"
                style="@style/TextViewStyle"
                android:layout_columnWeight="1"
                android:hint="@string/GBC"





                android:layout_rowWeight="1" />

            <TextView
                android:id="@+id/GBC_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextViewStyle"
                android:text="100"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1" />

            <TextView

                android:layout_row="3"
                android:layout_column="0"
                android:layout_columnWeight="1"
                style="@style/TextViewStyle"
                android:hint="@string/Gas"


                android:layout_rowWeight="1" />


            <TextView
                android:id="@+id/gas_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextViewStyle"
                android:layout_row="3"
                android:layout_column="1"
                android:text="100"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1" />

            <TextView
                android:id="@+id/XBC_TV"
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="1"
                android:text="100"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1" />

            <TextView
                android:id="@+id/electricity_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                style="@style/TextViewStyle"

                android:layout_row="0"
                android:layout_column="1"

                android:text="100" />

        </GridLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>